# proenb-csharp-websrc

./: .gitignore  README.md  cabal.project  csharp-lecture.cabal  deploy.sh  site.hs  site.sh
websrc/: index.html
websrc/css/: cs.css
websrc/files/: q4_items1.txt  q4_items2.txt  q4_items3.txt  q4_items4.txt  q4_items5.txt  q4_items6.txt
websrc/js/: currentlink.js  preprocess.js
websrc/pages/: links.md  links.rst  past_changes.md  q1.md  q1.rst  q2.md  q2.rst  q3.md  q3.rst  q4.md  q4.rst  q5.md  q5.rst  q6.md  q6.rst  setup.md  setup.rst  setup_gui.md  setup_gui.rst  setup_q.md  setup_q.rst  w1.md  w1.rst  w2.md  w2.rst  w3.md  w3.rst  w4.md  w4.rst  w5.md  w5.rst  w6.md  w6.rst
websrc/questions/: eto_instruction.md  eto_instruction.rst  instruction.md  instruction.rst
websrc/templates/: common-header.html  default.html  defaultQ.html  defaultSetup.html  defaultW.html  nav.html
