name:               csharp-lecture
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , pandoc >= 2.11 && < 2.18
                  , text   >= 0.11 && < 1.3 
                  , filepath >=1.0 && <1.5
                  , directory >=1.2.3 && <1.4
                  , time >=1.5 && <1.14
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
